# klex

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README-ja.md  README.md  build.rs  example.klex
src/: generator.rs  lexer.rs  lib.rs  main.rs  parser.rs  template.rs  token.rs
tests/: example.klex  lexer_test.rs  regressions.rs  test_actioncode.klex  test_any_chars.klex  test_any_chars_lexer.rs  test_calc.klex  test_charrange.klex  test_context.klex  test_context_lexer.rs  test_escaped_chars.klex  test_escaped_chars_lexer.rs  test_japanese.klex  test_lineno.klex  test_new_patterns.klex  test_new_patterns_lexer.rs  test_underscore.klex  test_unicode.klex
